remove unnecessary files, try to fix z-index issues, change index page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4579,7 +4579,7 @@ p {
   min-height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
-  z-index: 10;
+  z-index: 31;
   background-color: #f0f5f6; }
 
 .snipcart-modal__overlay {
@@ -5004,7 +5004,7 @@ p {
   .snipcart-cart-header {
     padding-right: 0;
     padding-left: 0;
-    z-index: auto;
+    z-index: 400;
     height: auto;
     position: relative;
     padding: 32px 16px; } }
