--- a/src/styles/snipcart.scss
+++ b/src/styles/snipcart.scss
@@ -187,7 +187,8 @@
   min-height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
-  z-index: 10;
+  // z-index: 10; changed to above navbar!
+  z-index: 31;
   background-color: #f0f5f6;
 }
 .snipcart-modal__overlay {
@@ -626,7 +627,8 @@
   .snipcart-cart-header {
     padding-right: 0;
     padding-left: 0;
-    z-index: auto;
+    // z-index: auto;
+    z-index: 400;
     height: auto;
     position: relative;
     padding: 32px 16px;
